# tsa

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/tsa-adapter/: Cargo.toml
crates/tsa-adapter-bigtable/: Cargo.toml
crates/tsa-adapter-bigtable/src/: adapter.rs  client.rs  lib.rs  schema.rs
crates/tsa-adapter-bigtable/src/repositories/: account.rs  api_key.rs  mod.rs  organization.rs  organization_invitation.rs  organization_member.rs  passkey.rs  passkey_challenge.rs  session.rs  two_factor.rs  user.rs  verification_token.rs
crates/tsa-adapter-dynamodb/: Cargo.toml
crates/tsa-adapter-dynamodb/src/: adapter.rs  lib.rs  schema.rs
crates/tsa-adapter-dynamodb/src/repositories/: account.rs  api_key.rs  mod.rs  organization.rs  organization_invitation.rs  organization_member.rs  passkey.rs  passkey_challenge.rs  session.rs  two_factor.rs  user.rs  utils.rs  verification_token.rs
crates/tsa-adapter-firestore/: Cargo.toml
crates/tsa-adapter-firestore/src/: adapter.rs  client.rs  lib.rs  schema.rs
crates/tsa-adapter-firestore/src/repositories/: account.rs  api_key.rs  mod.rs  organization.rs  organization_invitation.rs  organization_member.rs  passkey.rs  passkey_challenge.rs  session.rs  two_factor.rs  user.rs  verification_token.rs
crates/tsa-adapter-mongodb/: Cargo.toml
crates/tsa-adapter-mongodb/src/: adapter.rs  lib.rs  schema.rs
crates/tsa-adapter-mongodb/src/repositories/: account.rs  api_key.rs  mod.rs  organization.rs  organization_invitation.rs  organization_member.rs  passkey.rs  passkey_challenge.rs  session.rs  two_factor.rs  user.rs  verification_token.rs
crates/tsa-adapter-redis/: Cargo.toml
crates/tsa-adapter-redis/src/: lib.rs
crates/tsa-adapter-seaorm/: Cargo.toml
crates/tsa-adapter-seaorm/src/: lib.rs  repository.rs
crates/tsa-adapter-seaorm/src/entity/: account.rs  api_key.rs  mod.rs  organization_invitation.rs  organization_member.rs  passkey.rs  two_factor.rs  user.rs
crates/tsa-adapter-seaorm/src/migration/: m20241219_000002_create_sessions_table.rs  m20241219_000003_create_accounts_table.rs  m20241219_000004_create_verification_tokens_table.rs  m20241219_000005_create_two_factors_table.rs  m20241219_000006_create_organizations_table.rs  m20241219_000007_create_organization_members_table.rs  m20241219_000011_create_passkey_challenges_table.rs  mod.rs
crates/tsa-adapter-seaorm/src/repository/: account.rs  api_key.rs  organization.rs  organization_invitation.rs  organization_member.rs  passkey.rs  passkey_challenge.rs  session.rs  two_factor.rs  user.rs  verification_token.rs
crates/tsa-adapter/src/: memory.rs
crates/tsa-auth/: Cargo.toml
crates/tsa-auth-adapter/: Cargo.toml
crates/tsa-auth-adapter-bigtable/: Cargo.toml
crates/tsa-auth-adapter-bigtable/src/: adapter.rs  client.rs  schema.rs
crates/tsa-auth-adapter-bigtable/src/repositories/: account.rs  account_lockout.rs  api_key.rs  audit_log.rs  impersonation_session.rs  ip_rule.rs  mod.rs  organization.rs  organization_invitation.rs  organization_member.rs  passkey.rs  passkey_challenge.rs  password_history.rs  session.rs  two_factor.rs  user.rs  verification_token.rs
crates/tsa-auth-adapter-dynamodb/: Cargo.toml
crates/tsa-auth-adapter-dynamodb/src/: adapter.rs  schema.rs
crates/tsa-auth-adapter-dynamodb/src/repositories/: account.rs  account_lockout.rs  api_key.rs  audit_log.rs  impersonation_session.rs  ip_rule.rs  organization.rs  organization_invitation.rs  organization_member.rs  passkey.rs  passkey_challenge.rs  password_history.rs  session.rs  two_factor.rs  user.rs  utils.rs  verification_token.rs
crates/tsa-auth-adapter-firestore/: Cargo.toml
crates/tsa-auth-adapter-firestore/src/: adapter.rs  client.rs  schema.rs
crates/tsa-auth-adapter-firestore/src/repositories/: account.rs  account_lockout.rs  api_key.rs  audit_log.rs  impersonation_session.rs  ip_rule.rs  mod.rs  organization.rs  organization_invitation.rs  organization_member.rs  passkey.rs  passkey_challenge.rs  password_history.rs  session.rs  two_factor.rs  user.rs  verification_token.rs
crates/tsa-auth-adapter-mongodb/: Cargo.toml
crates/tsa-auth-adapter-mongodb/src/: adapter.rs  schema.rs
crates/tsa-auth-adapter-mongodb/src/repositories/: account.rs  api_key.rs  audit_log.rs  impersonation_session.rs  organization_member.rs  passkey.rs  passkey_challenge.rs  password_history.rs  two_factor.rs  user.rs
crates/tsa-auth-adapter-redis/: Cargo.toml
crates/tsa-auth-adapter-redis/src/: lib.rs
crates/tsa-auth-adapter-seaorm/: Cargo.toml
crates/tsa-auth-adapter/src/: lib.rs  memory.rs
crates/tsa-auth-axum/: Cargo.toml
crates/tsa-auth-axum/src/: error.rs  lib.rs  main.rs  state.rs
crates/tsa-auth-cli/: Cargo.toml
crates/tsa-auth-cli/src/: client.rs  config.rs  main.rs
crates/tsa-auth-enterprise/: Cargo.toml
crates/tsa-auth-enterprise/src/: approval.rs  channels.rs  config.rs  lib.rs  resolver.rs
crates/tsa-auth-grpc/: Cargo.toml
crates/tsa-auth-grpc/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/tsa-auth-oauth/: Cargo.toml
crates/tsa-auth-oauth/src/: provider.rs  registry.rs  state.rs
crates/tsa-auth-proto/: Cargo.toml
crates/tsa-auth-proto/src/: generated.rs  lib.rs
crates/tsa-auth-session/: Cargo.toml
crates/tsa-auth-session/src/: manager.rs
crates/tsa-auth-token/: Cargo.toml
crates/tsa-auth-token/src/: jwt.rs  lib.rs  opaque.rs
crates/tsa-auth/src/: callbacks.rs  lib.rs  oauth_auth.rs  passkey.rs  password.rs  security.rs  webhook.rs
crates/tsa-auth/tests/: integration_tests.rs
crates/tsa-axum/: Cargo.toml
crates/tsa-axum/src/: config.rs  error.rs  main.rs  state.rs
crates/tsa-cli/: Cargo.toml
crates/tsa-cli/src/: client.rs  config.rs  main.rs
crates/tsa-core/: Cargo.toml
crates/tsa-core/src/: error.rs  traits.rs  types.rs
crates/tsa-enterprise/: Cargo.toml
crates/tsa-enterprise/src/: approval.rs  channels.rs  config.rs  lib.rs  resolver.rs
crates/tsa-session/: Cargo.toml
crates/tsa-session/src/: manager.rs
crates/tsa-token/: Cargo.toml
crates/tsa-token/src/: jwt.rs  opaque.rs
(+253 files in other folders)
