[workspace]
resolver = "2"
members = [
    "crates/tsa",
    "crates/tsa-core",
    "crates/tsa-token",
    "crates/tsa-session",
    "crates/tsa-oauth",
    "crates/tsa-enterprise",
    "crates/tsa-adapter",
    "crates/tsa-adapter-seaorm",
    "crates/tsa-adapter-redis",
    "crates/tsa-adapter-mongodb",
    "crates/tsa-adapter-dynamodb",
    "crates/tsa-adapter-firestore",
    "crates/tsa-adapter-bigtable",
    "crates/tsa-axum",
    "crates/tsa-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/tsa"
keywords = ["auth", "authentication", "session", "token", "security"]
categories = ["authentication", "web-programming"]

[workspace.dependencies]
tsa = { path = "crates/tsa" }
tsa-core = { path = "crates/tsa-core" }
tsa-token = { path = "crates/tsa-token" }
tsa-session = { path = "crates/tsa-session" }
tsa-adapter = { path = "crates/tsa-adapter" }
tsa-oauth = { path = "crates/tsa-oauth" }
tsa-enterprise = { path = "crates/tsa-enterprise" }
tsa-adapter-seaorm = { path = "crates/tsa-adapter-seaorm" }
tsa-adapter-redis = { path = "crates/tsa-adapter-redis" }
tsa-adapter-mongodb = { path = "crates/tsa-adapter-mongodb" }
tsa-adapter-dynamodb = { path = "crates/tsa-adapter-dynamodb" }
tsa-adapter-firestore = { path = "crates/tsa-adapter-firestore" }
tsa-adapter-bigtable = { path = "crates/tsa-adapter-bigtable" }
tsa-axum = { path = "crates/tsa-axum" }
tsa-cli = { path = "crates/tsa-cli" }

thiserror = "2"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
sea-orm = { version = "1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"] }
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["util"] }
http = "1"
serde_yaml = "0.9"
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
tabled = "0.17"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
rpassword = "7"
anyhow = "1"
