[workspace]
resolver = "2"
members = [
    "crates/tsa-auth",
    "crates/tsa-auth-core",
    "crates/tsa-auth-token",
    "crates/tsa-auth-session",
    "crates/tsa-auth-oauth",
    "crates/tsa-auth-enterprise",
    "crates/tsa-auth-adapter",
    "crates/tsa-auth-proto",
    "crates/tsa-auth-grpc",
    "crates/tsa-auth-cli",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexchoi0/tsa"
authors = ["Alex Choi <alex@alexchoi.dev>"]
keywords = ["auth", "authentication", "session", "token", "security"]
categories = ["authentication", "web-programming"]

[workspace.dependencies]
tsa-auth = { version = "0.1.2", path = "crates/tsa-auth" }
tsa-auth-core = { version = "0.1.2", path = "crates/tsa-auth-core" }
tsa-auth-token = { version = "0.1.2", path = "crates/tsa-auth-token" }
tsa-auth-session = { version = "0.1.2", path = "crates/tsa-auth-session" }
tsa-auth-adapter = { version = "0.1.2", path = "crates/tsa-auth-adapter" }
tsa-auth-oauth = { version = "0.1.2", path = "crates/tsa-auth-oauth" }
tsa-auth-enterprise = { version = "0.1.2", path = "crates/tsa-auth-enterprise" }
tsa-auth-proto = { version = "0.1.2", path = "crates/tsa-auth-proto" }
tsa-auth-grpc = { version = "0.1.2", path = "crates/tsa-auth-grpc" }
tsa-auth-cli = { version = "0.1.2", path = "crates/tsa-auth-cli" }

tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
thiserror = "2"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
sea-orm = { version = "1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"] }
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["util"] }
http = "1"
serde_yaml = "0.9"
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
tabled = "0.17"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
rpassword = "7"
anyhow = "1"
toml = "0.8"
