[package]
name = "tsa-adapter-firestore"
description = "Google Firestore adapter for TSA (Tokens, Sessions, Authentication)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tsa-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
base64.workspace = true
thiserror.workspace = true
gcloud-sdk = { version = "0.28", features = ["google-firestore-v1"] }
prost-types = "0.13"
tonic = "0.14"
