[package]
name = "tsa-adapter"
description = "Database and storage adapters for TSA"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tsa-core.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
