[package]
name = "tsa-auth-adapter-bigtable"
description = "Google Bigtable adapter for TSA (Tokens, Sessions, Authentication)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tsa-auth-core.workspace = true
tsa-auth-adapter.workspace = true
async-trait.workspace = true
paste = "1.0"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
thiserror.workspace = true
gcloud-sdk = { version = "0.28", features = ["google-bigtable-v2"] }
tonic = "0.14"
