[package]
name = "tsa-auth-adapter-dynamodb"
description = "AWS DynamoDB adapter for TSA (Tokens, Sessions, Authentication)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tsa-auth-core.workspace = true
tsa-auth-adapter.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
aws-config = "1"
aws-sdk-dynamodb = "1"
base64.workspace = true
paste = "1.0"
