[package]
name = "tsa-auth-axum"
description = "Standalone Axum API server for TSA authentication"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tsa-server"
path = "src/main.rs"

[dependencies]
tsa-auth = { workspace = true, features = ["oauth", "totp", "passkey", "enterprise"] }
tsa-auth-core.workspace = true
tsa-auth-adapter.workspace = true
tsa-auth-enterprise.workspace = true

axum = { workspace = true, features = ["macros"] }
axum-extra.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "trace", "compression-gzip"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
thiserror.workspace = true
async-trait.workspace = true
dotenvy = "0.15"
config = "0.14"
anyhow.workspace = true

[dev-dependencies]
reqwest.workspace = true
