[package]
name = "tsa-auth-enterprise"
description = "Enterprise features for TSA authentication library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tsa-auth-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
