[package]
name = "tsa-auth-oauth"
description = "OAuth providers for TSA authentication library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tsa-auth-core.workspace = true

async-trait.workspace = true
base64.workspace = true
oauth2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
