[package]
name = "tsa-auth-token"
description = "Token generation and validation for TSA"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tsa-auth-core.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
rand.workspace = true
sha2.workspace = true
