[package]
name = "tsa-axum"
version = "0.1.0"
edition = "2021"
description = "Standalone Axum API server for TSA authentication"
license = "MIT"

[[bin]]
name = "tsa-server"
path = "src/main.rs"

[dependencies]
tsa = { workspace = true, features = ["oauth", "totp", "passkey", "enterprise"] }
tsa-core = { workspace = true }
tsa-adapter = { workspace = true }
tsa-enterprise = { workspace = true }

axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression-gzip"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
dotenvy = "0.15"
config = "0.14"
anyhow = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
