[package]
name = "tsa-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for TSA authentication system"
license = "MIT"

[[bin]]
name = "tsa"
path = "src/main.rs"

[dependencies]
tsa-core = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
tabled = { workspace = true }
dirs = { workspace = true }
toml = "0.8"
dotenvy = "0.15"
dialoguer = "0.11"
