[package]
name = "tsa-core"
description = "Core types and traits for TSA (Tokens, Sessions, Authentication)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
