[package]
name = "tsa-enterprise"
version = "0.1.0"
edition = "2021"
description = "Enterprise features for TSA authentication library"
license = "MIT"

[dependencies]
tsa-core = { path = "../tsa-core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
