[package]
name = "tsa-session"
description = "Session management for TSA"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tsa-core.workspace = true
tsa-token.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
sha2.workspace = true
